[gd_scene load_steps=3 format=3 uid="uid://b750he7nyjqqe"]

[ext_resource type="Script" path="res://ui/menus/leader_preview/leader_preview.gd" id="2"]
[ext_resource type="PackedScene" path="res://ui/menus/leader_preview/ability_preview.tscn" id="4"]

[node name="leader_preview" type="PanelContainer"]
custom_minimum_size = Vector2(272, 310)
offset_right = 280.0
offset_bottom = 310.0
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="leader_name" type="Label" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Random leader"
uppercase = true

[node name="abilities_preview_container" type="VBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="ability_preview" parent="VBoxContainer/abilities_preview_container" instance=ExtResource("4")]
layout_mode = 2

[node name="ability_preview2" parent="VBoxContainer/abilities_preview_container" instance=ExtResource("4")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="cancel_button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Back"

[node name="confirm_button" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "OK"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/cancel_button" to="." method="cancel_button_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/confirm_button" to="." method="confirm_button_pressed"]
